Validation in YAML.
